--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
+workspace.xml
 /target/
