--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,18 @@
             <artifactId>log4j-web</artifactId>
             <version>2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.13</version>
+        </dependency>
     </dependencies>
 
 </project>
