--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/movie_tickets?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.alt=jdbc:mysql://127.0.0.1:3306/movie_tickets?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=
