--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-workspace.xml
+.idea\workspace.xml
 /target/
 /bin/
 /test/
+.idea/workspace.xml
